--- a/index.html
+++ b/index.html
@@ -7,26 +7,26 @@
 <body>
     <div class="container">
         <div class="row">
-            <div class="col-4">
-                <img src="1.jpg" class="img-thumbnail" style="width:300px;height:400px; />
+            <div class="col-6">
+                <img src="1.jpg" class="img-thumbnail" style="width:300px;height:400px; /> <br>
                     <button class=btn btn-primary" type=button> Like </button>
             </div>
              <div class="container">
         <div class="row">
-            <div class="col-4">
-                <img src="2.jpg" class="img-thumbnail" style="width:300px;height:400px; />
+            <div class="col-6">
+                <img src="2.jpg" class="img-thumbnail" style="width:300px;height:400px; /> <br>
                     <button class=btn btn-primary" type=button> Like </button>
             </div>
              <div class="container">
         <div class="row">
-            <div class="col-4">
-                <img src="3.jpg" class="img-thumbnail" style="width:300px;height:400px; />
+            <div class="col-6">
+                <img src="3.jpg" class="img-thumbnail" style="width:300px;height:400px; /> <br>
                     <button class=btn btn-primary" type=button> Like </button>
             </div>
              <div class="container">
         <div class="row">
-            <div class="col-4">
-                <img src="4.jpg" class="img-thumbnail" style="width:300px;height:400px; />
+            <div class="col-6">
+                <img src="4.jpg" class="img-thumbnail" style="width:300px;height:400px; /> <br>
                     <button class=btn btn-primary" type=button> Like </button>
             </div>
         </div>
